--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Služby</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+
+
   </head>
   <body>
     <section class="sirka">
@@ -13,7 +17,7 @@
       <div class="obsah-sekce dva-sloupce">
         <div class="sloupec1">
           <div class="cestovatel">
-            <img src="OBRÁZKY/happy-traveler.svg" />
+            <img src="OBRAZKY/happy-traveler.svg"/>
           </div>
         </div>
 
@@ -55,7 +59,7 @@
             <div class="kontejner">
               <section class="prvni ramecek">
                 <div class="mapa">
-                  <img src="OBRÁZKY/map-icon.svg" />
+                  <img src="OBRAZKY/map-icon.svg" />
                 </div>
 
                 <div class="text">
@@ -65,7 +69,7 @@
 
               <section class="druhy ramecek">
                 <div class="kaktus">
-                  <img src="OBRÁZKY/cactus-icon.svg" />
+                  <img src="OBRAZKY/cactus-icon.svg" />
                 </div>
 
                 <div class="text">
@@ -75,7 +79,7 @@
 
               <section class="treti ramecek">
                 <div class="letadlo">
-                  <img src="OBRÁZKY/plane-icon.svg" />
+                  <img src="OBRAZKY/plane-icon.svg" />
                 </div>
 
                 <div class="text">
@@ -106,7 +110,7 @@
       <div class="kontejner">
         <section class="ctvrty ramecek">
           <div class="palma">
-            <img src="OBRÁZKY/palm-icon.svg" />
+            <img src="OBRAZKY/palm-icon.svg" />
           </div>
 
           <div class="text">Doporučíme ty nejhezčí destinace pro výlety.</div>
@@ -114,7 +118,7 @@
 
         <section class="paty ramecek">
           <div class="slunecnik">
-            <img src="OBRÁZKY/umbrella-icon.svg" />
+            <img src="OBRAZKY/umbrella-icon.svg"/>
           </div>
 
           <div class="text">Objednáme slunečníky a plážová lehátka.</div>
@@ -122,7 +126,7 @@
 
         <section class="sesty ramecek">
           <div class="van">
-            <img src="OBRÁZKY/rv-icon.svg" />
+            <img src="OBRAZKY/rv-icon.svg" />
           </div>
 
           <div class="text">Pronajmeme karavan nebo vůz na cestování.</div>
